[gd_scene load_steps=9 format=3 uid="uid://xxxxxxxxxxxx"]

[ext_resource type="Script" path="res://mini games/anvil_mini_game.gd" id="1_pbr6s"]
[ext_resource type="Texture2D" uid="uid://dpe3i42rqkkng" path="res://assets/buttons/keyboard/key_down.png" id="2_j0gml"]
[ext_resource type="Texture2D" uid="uid://c3w0toplyah77" path="res://assets/buttons/keyboard/key_left.png" id="2_pii2r"]
[ext_resource type="Texture2D" uid="uid://dvckcjc8t3ei2" path="res://assets/buttons/crosshair123.png" id="8_1mr3p"]
[ext_resource type="AudioStream" uid="uid://bykecjav52vwo" path="res://assets/sfx/mini games/anvil/anvil_hit.wav" id="8_nuycr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dp6gl"]
bg_color = Color(0.133333, 0.133333, 0.133333, 0.65098)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i7s8e"]
bg_color = Color(0.145098, 0.145098, 0.145098, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vkm8r"]
bg_color = Color(0.784314, 0.392157, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="AnvilMiniGame" type="CanvasLayer"]
script = ExtResource("1_pbr6s")
skill_level = 3
weapon_type = 1

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameTitle" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -92.0
offset_top = 40.0
offset_right = 92.0
offset_bottom = 75.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "Ковальська справа"
horizontal_alignment = 1

[node name="RightPanel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -580.0
offset_top = -200.0
offset_right = -180.0
offset_bottom = 200.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dp6gl")

[node name="DetailedViewLabel" type="Label" parent="UI/RightPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 46.0
grow_horizontal = 2
text = "Детальний вигляд"
horizontal_alignment = 1

[node name="WorkpieceContainer" type="Panel" parent="UI/RightPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_i7s8e")

[node name="TemperatureLabel" type="Label" parent="UI/RightPanel/WorkpieceContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -88.0
offset_top = 20.0
offset_right = 90.0
offset_bottom = 46.0
grow_horizontal = 2
pivot_offset = Vector2(89, 13)
theme_override_font_sizes/font_size = 12
text = "Ідеальна температура (100%)"

[node name="TemperatureIndicator" type="ColorRect" parent="UI/RightPanel/WorkpieceContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -74.0
offset_top = 42.0
offset_right = 74.0
offset_bottom = -42.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.6, 0, 1)

[node name="DirectionArrow" type="TextureRect" parent="UI/RightPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -254.0
offset_top = 115.0
offset_right = -126.0
offset_bottom = 243.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(64, 64)
texture = ExtResource("2_j0gml")
stretch_mode = 5

[node name="FlipButton" type="TextureRect" parent="UI/RightPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -254.0
offset_top = 115.0
offset_right = -126.0
offset_bottom = 243.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(64, 64)
texture = ExtResource("2_pii2r")
stretch_mode = 5

[node name="ShrinkingCircle" type="TextureRect" parent="UI/RightPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -54.0
offset_top = -85.0
offset_right = 74.0
offset_bottom = 43.0
grow_vertical = 0
scale = Vector2(5, 5)
pivot_offset = Vector2(64, 64)
texture = ExtResource("8_1mr3p")
stretch_mode = 4

[node name="TargetRing" type="TextureRect" parent="UI/RightPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -254.0
offset_top = 115.0
offset_right = -126.0
offset_bottom = 243.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5, 5)
pivot_offset = Vector2(64, 64)
texture = ExtResource("8_1mr3p")
stretch_mode = 5

[node name="HitButtonA" type="TextureRect" parent="UI/RightPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -254.0
offset_top = 115.0
offset_right = -126.0
offset_bottom = 243.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(64, 64)
stretch_mode = 5

[node name="HitButtonB" type="TextureRect" parent="UI/RightPanel"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -254.0
offset_top = 115.0
offset_right = -126.0
offset_bottom = 243.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 5

[node name="HitButtonX" type="TextureRect" parent="UI/RightPanel"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -254.0
offset_top = 115.0
offset_right = -126.0
offset_bottom = 243.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 5

[node name="HitButtonY" type="TextureRect" parent="UI/RightPanel"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -254.0
offset_top = 115.0
offset_right = -126.0
offset_bottom = 243.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 5

[node name="WorkpieceLabel" type="Label" parent="UI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 160.0
offset_top = -10.0
offset_right = 240.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
text = "Заготовка"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="UI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 180.0
offset_top = -100.0
offset_right = -180.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_dp6gl")
theme_override_styles/fill = SubResource("StyleBoxFlat_vkm8r")
step = 1.0
value = 50.0
show_percentage = false

[node name="ProgressLabel" type="Label" parent="UI/ProgressBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = -13.0
offset_right = 23.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "Прогрес"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HitCounterLabel" type="Label" parent="UI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -130.0
offset_bottom = -104.0
grow_horizontal = 2
grow_vertical = 0
text = "Удари: 0/10"
horizontal_alignment = 1

[node name="FeedbackLabel" type="Label" parent="UI"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Ідеально!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InstructionsLabel" type="Label" parent="UI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -70.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 12
text = "Натисніть кнопку коли коло співпадає з цільовою зоною"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFX" type="Node" parent="."]

[node name="AnvilHit" type="AudioStreamPlayer" parent="SFX"]
unique_name_in_owner = true
stream = ExtResource("8_nuycr")
volume_db = -10.0
